@@ -114,8 +114,7 @@ public class EnvVars extends TreeMap<String, String> {
 
         // because of the backward compatibility, some parts of Jenkins passes
         // EnvVars as Map<String,String> so downcasting is safer.
-        if (m instanceof EnvVars) {
-            EnvVars lhs = (EnvVars) m;
+        if (m instanceof EnvVars lhs) {
             this.platform = lhs.platform;
         }
     }
@@ -283,7 +282,7 @@ public class EnvVars extends TreeMap<String, String> {
             }
 
             // if not, cut the reference to the first one.
-            cutCycleAt(cycle.get(0), cycle);
+            cutCycleAt(cycle.getFirst(), cycle);
         }
 
         /**
