@@ -80,7 +80,7 @@ public class UnixLifecycle extends Lifecycle {
         }
 
         // exec to self
-        String exe = args.get(0);
+        String exe = args.getFirst();
         LIBC.execvp(exe, new StringArray(args.toArray(new String[0])));
         throw new IOException("Failed to exec '" + exe + "' " + LIBC.strerror(Native.getLastError()));
     }
