@@ -24,8 +24,8 @@
 
 package hudson.model.queue;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -37,24 +37,31 @@ import hudson.model.Queue.BuildableItem;
 import hudson.model.Queue.JobOffer;
 import hudson.model.Queue.Task;
 import hudson.model.Queue.WaitingItem;
+import hudson.slaves.DumbSlave;
 import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.GregorianCalendar;
 import java.util.List;
 import java.util.concurrent.CopyOnWriteArrayList;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.JenkinsRule;
 import org.jvnet.hudson.test.TestExtension;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
 
 /**
  * @author Kohsuke Kawaguchi
  */
-public class LoadPredictorTest {
+@WithJenkins
+class LoadPredictorTest {
 
-    @Rule
-    public JenkinsRule j = new JenkinsRule();
+    private JenkinsRule j;
+
+    @BeforeEach
+    void setUp(JenkinsRule rule) {
+        j = rule;
+    }
 
     @TestExtension
     public static class LoadPredictorImpl extends LoadPredictor {
@@ -73,14 +80,14 @@ public class LoadPredictorTest {
      * - hence the consideration of the current task at hand shall fail, as it'll collide with the estimated future load.
      */
     @Test
-    public void test1() throws Exception {
+    void test1() throws Exception {
         Task t = mock(Task.class);
         when(t.getEstimatedDuration()).thenReturn(10000L);
         when(t.getSubTasks()).thenReturn((Collection) List.of(t));
 
         Computer c = createMockComputer(1);
 
-        JobOffer o = createMockOffer(c.getExecutors().get(0));
+        JobOffer o = createMockOffer(c.getExecutors().getFirst());
 
         MappingWorksheet mw = new MappingWorksheet(wrap(t), List.of(o));
 
@@ -100,7 +107,7 @@ public class LoadPredictorTest {
     }
 
     private Computer createMockComputer(int nExecutors) throws Exception {
-        Node n = mock(Node.class);
+        Node n = mock(DumbSlave.class);
         Computer c = mock(Computer.class);
         when(c.getNode()).thenReturn(n);
 
